--- a/Front/src/app/main/display-offers/display-offers.component.css
+++ b/Front/src/app/main/display-offers/display-offers.component.css
@@ -1,6 +1,47 @@
 /* === CONTENEDOR PRINCIPAL === */
 .offers-container {
-  padding: 32px;
+  padding: 2%;
+  background-color: #f2f2f2;
+}
+
+/* == FILTRO DE OFERTAS == */
+.search-bar {
+  display: flex;
+  width: 50%;
+
+  align-items: center;
+  margin-bottom: 2%;
+  border: 3px solid #1f1f1f;
+  border-radius: 15px;
+
+}
+
+.search-bar:focus-within {
+  border: 3px solid #e61b15;
+  border-radius: 15px;
+  box-shadow: 0px 0px 10px #ef5c57;
+  -webkit-box-shadow: 0px 0px 10px #ef5c57;
+  -moz-box-shadow: 0px 0px 10px #ef5c57;
+}
+
+.search-bar input {
+  width: 100%;
+  height: 3rem;
+  padding-left: 1%;
+  border: none;
+  border-radius: 15px;
+  background-color: #f2f2f2;
+  font-size: medium;
+}
+
+.search-bar input:focus {
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+#iconSearch {
+  margin-top: 0.5%;
 }
 
 /* === GRID RESPONSIVO === */
@@ -12,7 +53,6 @@
 
 /* === TARJETA DE OFERTA === */
 .offer-card {
-  background-color: #ffffff;
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   display: flex;
@@ -136,6 +176,7 @@ mat-card-subtitle {
   text-align: center;
   padding: 60px;
   color: #999;
+  background-color: #f2f2f2;
 }
 
 /* Para elementos mat-card específicos */
@@ -215,11 +256,12 @@ mat-card-content {
     gap: 16px;
     padding: 0 16px;
   }
-  
+
   .offer-card {
-    height: 240px; /* Altura ligeramente menor en móviles */
+    height: 240px;
+    /* Altura ligeramente menor en móviles */
   }
-  
+
   .offers-container {
     padding: 16px;
   }
@@ -227,26 +269,29 @@ mat-card-content {
 
 @media (max-width: 480px) {
   .offer-card {
-    height: 220px; /* Altura aún menor en pantallas muy pequeñas */
+    height: 220px;
+    /* Altura aún menor en pantallas muy pequeñas */
   }
-  
+
   mat-card-title {
     font-size: 1.1rem;
   }
-  
+
   .offer-description {
     font-size: 0.9rem;
-    -webkit-line-clamp: 2; /* Menos líneas en pantallas pequeñas */
+    -webkit-line-clamp: 2;
+    /* Menos líneas en pantallas pequeñas */
     line-clamp: 2;
     height: calc(1.4em * 2);
   }
-  
+
   .tooltip-button {
     width: 45px;
     height: 45px;
   }
-  
-  #info, #apply {
+
+  #info,
+  #apply {
     font-size: 2rem;
   }
 }
