--- a/Front/src/palettes.scss
+++ b/Front/src/palettes.scss
@@ -1,66 +1,66 @@
 $m2-primary: ( /* Color primario: rojo */
-    50 : #F38D8A, 
-    100 : #ED5450,
-    200 : #E82A24, 
-    300 : #D8403B,
-    400 : #E01C15, 
-    500 : #E61B15, 
-    600 : #D81A14, 
-    700 : #CA1813, 
-    800 : #AD1510,
+    50 : #fff1f1, 
+    100 : #ffe1e0,
+    200 : #ffc8c6, 
+    300 : #ffa19e,
+    400 : #ff6b67, 
+    500 : #fc3d37, 
+    600 : #e61b15, 
+    700 : #c51510, 
+    800 : #a31511,
     900 : #730E0B,
-    A100 : #E61B15, 
-    A200 : #E61B15,
-    A400 : #E61B15,
-    A700 : #E61B15,
+    A100 : #e61b15, 
+    A200 : #e61b15,
+    A400 : #e61b15,
+    A700 : #e61b15,
     contrast: ( /*Color del texto*/
-        50 : #333333,
-        100 : #333333,
-        200 : #333333,
-        300 : #333333,
-        400 : #333333,
-        500 : #333333, 
-        600 : #E1E1E0,
-        700 : #E1E1E0,
-        800 : #E1E1E0,
-        900 : #E1E1E0,
-        A100 : #E1E1E0,
-        A200 : #E1E1E0,
-        A400 : #E1E1E0,
-        A700 : #E1E1E0,
+        50 : #1f1f1f,
+        100 : #3d3d3d,
+        200 : #454545,
+        300 : #4f4f4f,
+        400 : #5d5d5d,
+        500 : #6d6d6d, 
+        600 : #888888,
+        700 : #b0b0b0,
+        800 : #d1d1d1,
+        900 : #e7e7e7,
+        A100 : #e7e7e7,
+        A200 : #e7e7e7,
+        A400 : #e7e7e7,
+        A700 : #e7e7e7,
     )
 );
 
 $m2-accent: (
-    50 : #f9f7ff,
-    100 : #efecff,
-    200 : #e4dfff,
-    300 : #d9d2ff,
-    400 : #d1c8ff,
-    500 : #333333,
-    600 : #c3b8ff,
-    700 : #bcafff,
-    800 : #b5a7ff,
-    900 : #a999ff,
-    A100 : #333333,
-    A200 : #333333,
-    A400 : #333333,
-    A700 : #333333,
+    50 : #f6f6f6,
+    100 : #e7e7e7,
+    200 : #d1d1d1,
+    300 : #b0b0b0,
+    400 : #888888,
+    500 : #6d6d6d,
+    600 : #5d5d5d,
+    700 : #4f4f4f,
+    800 : #454545,
+    900 : #3d3d3d,
+    A100 : #1f1f1f,
+    A200 : #1f1f1f,
+    A400 : #1f1f1f,
+    A700 : #1f1f1f,
     contrast: (
-        50 : #E1E1E0,
-        100 : #E1E1E0,
-        200 : #E1E1E0,
-        300 : #E1E1E0,
-        400 : #E1E1E0,
-        500 : #E1E1E0,
-        600 : #E1E1E0,
-        700 : #E1E1E0,
-        800 : #E1E1E0,
-        900 : #E1E1E0,
-        A100 : #E1E1E0,
-        A200 : #E1E1E0,
-        A400 : #E1E1E0,
-        A700 : #E1E1E0,
+        50 : #1f1f1f,
+        100 : #3d3d3d,
+        200 : #454545,
+        300 : #4f4f4f,
+        400 : #5d5d5d,
+        500 : #6d6d6d,
+        600 : #888888,
+        700 : #b0b0b0,
+        800 : #d1d1d1,
+        900 : #e7e7e7,
+        A100 : #f6f6f6,
+        A200 : #f6f6f6,
+        A400 : #f6f6f6,
+        A700 : #f6f6f6,
     )
 );
 
