--- a/Front/src/app/app.component.css
+++ b/Front/src/app/app.component.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #D6D6D6; /* BLANCO MEDIO */
   overflow-x: hidden;
   width: 100%;
   max-width: 100%;
@@ -22,7 +21,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  background-color: #f2f2f2;
+  background-color: #f6f6f6;
 }
 
 mat-sidenav-content {
@@ -111,7 +110,7 @@ mat-nav-list a mat-icon {
 
 mat-nav-list a.active {
   background-color: rgba(230, 27, 21, 0.15) !important;
-  border-left: 3px solid #e61b15;
+  /* border-left: 3px solid #e61b15; */
 }
 
 mat-nav-list a:hover {
