--- a/Front/src/app/main/admin-tech-labels-manager/admin-tech-labels-manager.component.css
+++ b/Front/src/app/main/admin-tech-labels-manager/admin-tech-labels-manager.component.css
@@ -338,8 +338,8 @@
   background-color: white;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-  margin-right: 3%;
-  margin-left: 20.7%;
+  margin-right: auto;
+  margin-left: auto;
   width: 56%;
   box-sizing: border-box;
 }
@@ -549,7 +549,8 @@
     flex-direction: column;
     gap: 12px;
     max-width: 700px;
-    margin-right: 11.5%;
+    margin-left: auto;
+    margin-right: auto;
    
   }
 
@@ -563,9 +564,10 @@
   }
   
   .table-container {
-    width: 90%;
+    width: 70%;
     max-width: none;
-    margin-right: 7%;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .labels-table {
@@ -576,7 +578,7 @@
   .pagination-controls {
     flex-direction: column;
     gap: 12px;
-    width: 90%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
     max-width: 95%;
