--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -38,7 +38,7 @@
         </button> -->
         <button *ngIf="companyName==''" mat-icon-button matTooltip="Inscribirse a la oferta"
           (click)="applyOffer(offer.id)" class="tooltip-button">
-          <mat-icon id="apply">work</mat-icon>
+          <mat-icon id="apply">outbox</mat-icon>
         </button>
       </mat-card-actions>
     </mat-card>
